--- a/styles.css
+++ b/styles.css
@@ -346,7 +346,6 @@ section:nth-child(4) { animation-delay: 0.8s; }
 }
 
 
-/* scroll animation classes */
 .hidden-left {
     opacity: 0;
     filter: blur(5px);
@@ -367,7 +366,7 @@ section:nth-child(4) { animation-delay: 0.8s; }
     transform: translateX(0);
 }
 
-/* Payment Modal Styling */
+/*pmt*/
 .modal {
     display: none;
     position: fixed;
